--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start-backend": "json-server --watch db.json --port $PORT"
+    "start-backend": "json-server --watch db.json --host 0.0.0.0 --port $PORT"
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.53.2",
